# ink-metadata

./: README.md
contracts/: Cargo.toml  lib.rs  psp22.rs
contracts/psp22/: Cargo.toml
contracts/psp721/: Cargo.toml  mod.rs
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
ink/: Cargo.toml  lib.rs
psp22/: Cargo.toml  lib.rs
