[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
startup = "0.1.1"
ink = { path = "../ink" }
psp22 = { path = "../psp22" }

# `lto` should be enabled to execute the `on_startup` macro in another crates
[profile.release]
lto = true

[profile.dev]
lto = true